--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -11,12 +11,12 @@
     <header class ="container">
         <h1 class="display-3">Videoclub</h1>
     </header>
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
+            <a class="navbar-brand" href="#">Videoclub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Navbar</a>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="navbar-nav mt-2 mt-md-0">
                     <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
