--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
+    <link rel="stylesheet" href="style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
@@ -29,17 +30,21 @@
     <section id="formulario" class ="container">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Iniciar sesion</h4>
+                <h4 class="card-title">Iniciar sesión</h4>
                 <form>
                     <div class="form-group">
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Introduce tu email">
+                        <output id="campos-formulario">Email:</output>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Introduce tu email" required="true">
                     </div>
                     <div class="form-group">
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
+                        <output id="campos-formulario">Contraseña:</output>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="*********" required="true">
                     </div>
+                    <div class="form-group">
                     <a href="">
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </a>
+                    </div>
                 </form>
             </div>
         </div>
