--- a/mysite/myapp/templates/myapp/login_user.html
+++ b/mysite/myapp/templates/myapp/login_user.html
@@ -11,7 +11,26 @@
     <header class ="container">
         <h1 class="display-3">Videoclub</h1>
     </header>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">Videoclub</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="navbar-nav mt-2 mt-md-0">
+                    <li class="nav-item"><a class="nav-link" href={% url 'login_user' %}>Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <form>
+        <label for="nombre_pelicula">Introduce el nombre de la pelicula:</label>
+        <input type="text" id="nombre_pelicula" name="nombre_pelicula">
+        <input type="submit" value="Buscar">
+    </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
