--- a/mysite/myapp/templates/myapp/login_admin.html
+++ b/mysite/myapp/templates/myapp/login_admin.html
@@ -14,15 +14,24 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Videoclub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div id="navbar" class="navbar-collapse collapse">
+            <div id="navbarNavDropdown" class="navbar-collapse collapse">
                 <ul class="navbar-nav mt-2 mt-md-0">
                     <li class="nav-item"><a class="nav-link" href={% url 'login_admin' %}>Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
                     <li class="nav-item"><a class="nav-link" href={% url 'nuevas_peliculas' %}>Añadir peliculas</a></li>
-                    <li class="nav-item"><a class="nav-link" href={% url 'usuarios' %}>Usuarios</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="#">Añadir</a></li>
+                                <li><a class="dropdown-item" href="#">Borrar</a></li>
+                                <li><a class="dropdown-item" href="#">Modificar</a></li>
+                            </ul>
+                        </div>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
                 </ul>
             </div>
