--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -32,25 +32,42 @@
             <div class="card-body">
                 <h4 class="card-title">Iniciar sesión</h4>
                 <form>
-                    <div class="form-group">
-                        <output id="campos-formulario">Email:</output>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Introduce tu email" required="true">
+                    <div class="row">
+                        <div class="col" id="inicio-login">
+                            <div class="form-group">
+                                <output id="campos-formulario">Email:</output>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Introduce tu email" required="true">
+                            </div>
+                            <div class="form-group">
+                                <output id="campos-formulario">Contraseña:</output>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="*********" required="true">
+                            </div>
+                            <div class="form-group">
+                                <a href="">
+                                    <button id="boton-inicio" type="submit" class="btn btn-primary">Login</button>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col" id="inicio-registro">
+                            <div class="form-group">
+                                <output id="campos-formulario">¿Todavía no tienes cuenta? Haga click en el botón de abajo</output>
+                            </div>
+                            <div class="form-group">
+                                <a href="">
+                                    <button id="boton-inicio" type="submit" class="btn btn-primary">Registrar</button>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <output id="campos-formulario">Contraseña:</output>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="*********" required="true">
-                    </div>
-                    <div class="form-group">
-                    <a href="">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </a>
-                    </div>
-                </form>
+                </form>      
             </div>
         </div>
     </section>
     <a href={% url 'login_user' %}>Prueba user</a>
     <a href={% url 'login_admin' %}>Prueba admin</a>
+    <div class="padre">
+        <div class="hijo">Centrado vertical y horizontal con FlexBox.</div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
