--- a/mysite/myapp/templates/myapp/login_admin.html
+++ b/mysite/myapp/templates/myapp/login_admin.html
@@ -22,15 +22,16 @@
                     <li class="nav-item"><a class="nav-link" href={% url 'login_admin' %}>Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
                     <li class="nav-item"><a class="nav-link" href={% url 'nuevas_peliculas' %}>Añadir peliculas</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Añadir</a></li>
-                                <li><a class="dropdown-item" href="#">Borrar</a></li>
-                                <li><a class="dropdown-item" href="#">Modificar</a></li>
-                            </ul>
-                        </div>
+                    <li class="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="true">
+                          Usuarios
+                        </a>
+                      
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
                 </ul>
