--- a/mysite/myapp/static/css/style.css
+++ b/mysite/myapp/static/css/style.css
@@ -7,12 +7,12 @@
     margin-top: 15px;
 }
 
-#formulario{
+#formulario, #formulario_pelicula, #formulario_user{
     margin-top: 20px;
     width: 50%;
 }
 
-#ampos-formulario{
+#campos-formulario{
     text-align: end;
 }
 
@@ -29,3 +29,8 @@
     justify-content: center;
     align-items: center;
 }
+
+#buscar_pelicula{
+    align-self: center;
+}
+
