--- a/mysite/myapp/templates/myapp/new_film.html
+++ b/mysite/myapp/templates/myapp/new_film.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
@@ -14,20 +16,30 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Videoclub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div id="navbar" class="navbar-collapse collapse">
+            <div id="navbarNavDropdown" class="navbar-collapse collapse">
                 <ul class="navbar-nav mt-2 mt-md-0">
                     <li class="nav-item"><a class="nav-link" href={% url 'login_admin' %}>Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Añadir peliculas</a></li>
+                    <li class="nav-item"><a class="nav-link" href={% url 'new_film' %}>Añadir peliculas</a></li>
+                    <li class="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="true">
+                          Usuarios
+                        </a>
+                      
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                          <li><a class="dropdown-item" href={% url 'new_user' %}>Añadir</a></li>
+                          <li><a class="dropdown-item" href="#">Borrar/Modificar</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <section id="formulario" class ="container">
+    <section id="formulario_peliculas" class ="container">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Añadir pelicula</h5>
