--- a/mysite/myapp/templates/myapp/login_admin.html
+++ b/mysite/myapp/templates/myapp/login_admin.html
@@ -31,10 +31,11 @@
                       
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                           <li><a class="dropdown-item" href={% url 'new_user' %}>Añadir</a></li>
-                          <li><a class="dropdown-item" href="#">Borrar/Modificar</a></li>
+                          <li><a class="dropdown-item" href={% url 'modify_user' %}>Borrar/Modificar</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
+                    <li class="nav-item"><a class="nav-link" href={% url 'index' %}>Cerrar sesión</a></li>
                 </ul>
             </div>
         </div>
