--- a/mysite/myapp/templates/myapp/login_user.html
+++ b/mysite/myapp/templates/myapp/login_user.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
@@ -22,15 +24,18 @@
                     <li class="nav-item"><a class="nav-link" href={% url 'login_user' %}>Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
+                    <li class="nav-item"><a class="nav-link" href={% url 'index' %}>Cerrar sesión</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <form>
-        <label for="nombre_pelicula">Introduce el nombre de la pelicula:</label>
-        <input type="text" id="nombre_pelicula" name="nombre_pelicula">
-        <input type="submit" value="Buscar">
-    </form>
+    <section id="buscar_pelicula" class ="container">
+        <form>
+            <label for="nombre_pelicula">Introduce el nombre de la pelicula:</label>
+            <input type="text" id="nombre_pelicula" name="nombre_pelicula">
+            <input type="submit" value="Buscar">
+        </form>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
