--- a/mysite/myapp/templates/myapp/new_film.html
+++ b/mysite/myapp/templates/myapp/new_film.html
@@ -35,6 +35,7 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
+                    <li class="nav-item"><a class="nav-link" href={% url 'index' %}>Cerrar sesión</a></li>
                 </ul>
             </div>
         </div>
