--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,16 +8,34 @@
     <title>Inicio</title>
     
     
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">   
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="../../static/css/style.css">
+   
 
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-    <header class ="container">
+    <header class ="header">
+        <!--img id="logo" src="img/logo.jpg"-->
         <h1 class="display-3">Videoclub</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">Videoclub</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="navbar-nav mt-2 mt-md-0">
+                        <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!--nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Videoclub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,37 +49,25 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav-->
     <section id="formulario" class ="container">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Iniciar sesión</h4>
                 <form>
-                    <div class="row">
-                        <div class="col" id="inicio-login">
-                            <div class="form-group">
-                                <output id="campos-formulario">Email:</output>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Introduce tu email" required="true">
-                            </div>
-                            <div class="form-group">
-                                <output id="campos-formulario">Contraseña:</output>
-                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="*********" required="true">
-                            </div>
-                            <div class="form-group">
-                                <a href="">
-                                    <button id="boton-inicio" type="submit" class="btn btn-primary">Login</button>
-                                </a>
-                            </div>
+                    <div class="col" id="inicio-login">
+                        <div class="form-group">
+                            <output id="campos-formulario">Email:</output>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Introduce tu email" required="true">
                         </div>
-                        <div class="col" id="inicio-registro">
-                            <div class="form-group">
-                                <output id="campos-formulario">¿Todavía no tienes cuenta? Haga click en el botón de abajo</output>
-                            </div>
-                            <div class="form-group">
-                                <a href="">
-                                    <button id="boton-inicio" type="submit" class="btn btn-primary">Registrar</button>
-                                </a>
-                            </div>
+                        <div class="form-group">
+                            <output id="campos-formulario">Contraseña:</output>
+                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="*********" required="true">
+                        </div>
+                        <div class="form-group">
+                            <a href="">
+                                <button id="boton-inicio" type="submit" class="btn btn-primary">Login</button>
+                            </a>
                         </div>
                     </div>
                 </form>      
@@ -70,9 +76,6 @@
     </section>
     <a href={% url 'login_user' %}>Prueba user</a>
     <a href={% url 'login_admin' %}>Prueba admin</a>
-    <div class="padre">
-        <div class="hijo">Centrado vertical y horizontal con FlexBox.</div>
-      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
