--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     
-    
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
+    <link rel="stylesheet" type="text/css" href="{% static 'static/css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="../../static/css/style.css">
    
 
@@ -16,40 +16,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-    <header class ="header">
-        <!--img id="logo" src="img/logo.jpg"-->
-        <h1 class="display-3">Videoclub</h1>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="#">Videoclub</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="navbar-nav mt-2 mt-md-0">
-                        <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
-                    </ul>
-                </div>
+    
+    <header class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                <h1>Videoclub</h1>
             </div>
-        </nav>
-    </header>
-    <!--nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">Videoclub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="navbar-nav mt-2 mt-md-0">
-                    <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
-                </ul>
+            <div class="col-lg-9">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container">
+                        <a class="navbar-brand" href="#">Videoclub</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div id="navbar" class="navbar-collapse collapse">
+                            <ul class="navbar-nav mt-2 mt-md-0">
+                                <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
             </div>
+            
         </div>
-    </nav-->
+    </header>
     <section id="formulario" class ="container">
         <div class="card">
             <div class="card-body">
