cambios mestra peliculas nuevas

--- a/mysite/myapp/templates/myapp/login_user.html
+++ b/mysite/myapp/templates/myapp/login_user.html
@@ -39,6 +39,58 @@
             <input type="submit" value="Buscar">
         </form>
     </section>
+    <section id="peliculas_nuevas" class="mb-5">
+        <div class="container">
+            <h2>Añadidas esta semana</h2>
+        </div>
+        <div class="container">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="img/1917.jpg" alt="1917" width="160" height="200" class="mx-auto d-block"> 
+                        </div>
+                        <div class="col-9">
+                            <h3>Título: 1917</h3>
+                            <p>Año lanzamiento: 2019</p>
+                            <p>Director: Sam Mendes</p>
+                            <p>La película sigue a dos jóvenes soldados británicos a lo largo de un único día en lo más crudo de la Primera Guerra Mundial.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="img/soul.jpg" alt="Soul" width="160" height="200" class="mx-auto d-block"> 
+                        </div>
+                        <div class="col-9">
+                            <h3>Título: Soul</h3>
+                            <p>Año lanzamiento: 2020</p>
+                            <p>Director: Pete Docter</p>
+                            <p>Los ritmos pegadizos, acentuados por palmas y movimientos corporales espontáneos, son un importante elemento del soul. Otras características son la llamada y respuesta entre el solista y el coro, y un sonido vocal particularmente tenso.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="img/mank.jpg" alt="Mank" width="160" height="200" class="mx-auto d-block"> 
+                        </div>
+                        <div class="col-9">
+                            <h3>Título: Mank</h3>
+                            <p>Año lanzamiento: 2020</p>
+                            <p>Director: David Fincher</p>
+                            <p>se adentra en el Hollywood de 1930 a través de los ojos de Herman Mankiewicz, uno de los más grandes libretistas de la época, a quien el alcohol le hizo perder su reputación.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
