--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -19,7 +19,7 @@
     
     <header class="header bg-light">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div id="nav" class="container">
                     <a class="navbar-brand" href="#">Videoclub</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
             </nav>
         </div>
     </header>
-    <section id="formulario" class ="container">
+    <section id="formulario" class ="ventana">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Iniciar sesión</h4>
