--- a/mysite/myapp/templates/myapp/films.html
+++ b/mysite/myapp/templates/myapp/films.html
@@ -32,16 +32,9 @@
             </nav>
         </div>
     </header>
-    <section id="buscar_pelicula" class ="container">
-        <form>
-            <label for="nombre_pelicula">Introduce el nombre de la pelicula:</label>
-            <input type="text" id="nombre_pelicula" name="nombre_pelicula">
-            <input type="submit" value="Buscar">
-        </form>
-    </section>
     <section id="peliculas_nuevas" class="mb-5">
         <div class="container">
-            <h2>Añadidas esta semana</h2>
+            <h2>Peliculas</h2>
         </div>
         <div class="container">
             <div class="card">
@@ -50,7 +43,7 @@
                         <div class="col-3">
                             <img src="img/1917.jpg" alt="1917" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-8">
+                        <div class="col-9">
                             <h3>Título: 1917</h3>
                             <p>Año lanzamiento: 2019</p>
                             <p>Director: Sam Mendes</p>
@@ -68,11 +61,29 @@
                         <div class="col-3">
                             <img src="img/soul.jpg" alt="Soul" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-8">
+                        <div class="col-9">
                             <h3>Título: Soul</h3>
                             <p>Año lanzamiento: 2020</p>
                             <p>Director: Pete Docter</p>
                             <p>Los ritmos pegadizos, acentuados por palmas y movimientos corporales espontáneos, son un importante elemento del soul. Otras características son la llamada y respuesta entre el solista y el coro, y un sonido vocal particularmente tenso.</p>
+                        </div>
+                        <div class="boton-entrar col-1">
+                            <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="img/mank.jpg" alt="Mank" width="160" height="200" class="mx-auto d-block"> 
+                        </div>
+                        <div class="col-9">
+                            <h3>Título: Mank</h3>
+                            <p>Año lanzamiento: 2020</p>
+                            <p>Director: David Fincher</p>
+                            <p>Se adentra en el Hollywood de 1930 a través de los ojos de Herman Mankiewicz, uno de los más grandes libretistas de la época, a quien el alcohol le hizo perder su reputación.</p>
                         </div>
                         <div class="boton-entrar col-1">
                             <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
