--- a/mysite/myapp/templates/myapp/login_admin.html
+++ b/mysite/myapp/templates/myapp/login_admin.html
@@ -22,7 +22,7 @@
                     <div id="navbar" class="navbar-collapse collapse justify-content-end">
                         <ul class="navbar-nav mt-2 mt-md-0">
                             <li class="nav-item"><a class="nav-link" href={% url 'login_admin' %}>Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
+                            <li class="nav-item"><a class="nav-link" href={% url 'films' %}>Peliculas</a></li>
                             <li class="nav-item"><a class="nav-link" href={% url 'new_film' %}>Añadir peliculas</a></li>
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="true">
