mejora film.html

--- a/mysite/myapp/templates/myapp/film.html
+++ b/mysite/myapp/templates/myapp/film.html
@@ -61,17 +61,19 @@
                             <button id="boton-play" type="submit" class="btn btn-primary mx-auto d-block">Play</button>
                         </a>
                     </div>
-                    <div id="pelicula-ficha" class="container col-8">
-                        <p>Año lanzamiento: 2020</p>
-                        <p>Director: Pete Docter</p>
-                        <p>La película sigue a dos jóvenes soldados británicos a lo largo de un único día en lo más crudo de la Primera Guerra Mundial.</p>
+                    <div id="pelicula-ficha" class="col-8">
+                        <div class="container">
+                            <p>Año lanzamiento: 2020</p>
+                            <p>Director: Pete Docter</p>
+                            <p>La película sigue a dos jóvenes soldados británicos a lo largo de un único día en lo más crudo de la Primera Guerra Mundial.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <div id="video" class="ventana">
+    <div id="video" class="video">
         <div id="cerrar" class container>
             <a href="javascript:cerrar()"> <img src="img/x-mark.png" width="25" height="25"></a>
         </div>
