--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,7 +36,7 @@
             </nav>
         </div>
     </header>
-    <section id="formulario" class ="ventana">
+    <section id="formulario" class ="container">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Iniciar sesión</h4>
