--- a/mysite/myapp/static/css/style.css
+++ b/mysite/myapp/static/css/style.css
@@ -60,6 +60,7 @@ body, html {
 }
 
 #pelicula {
+    margin-top: 30px;
 }
 
 #pelicula-portada {
@@ -74,7 +75,7 @@ body, html {
 
 #pelicula-titulo div {
     margin: 0;
-    padding: 0 1.5rem;
+    padding-right: 2rem;
     display: table-cell;
     vertical-align: bottom;
 }
@@ -94,6 +95,19 @@ body, html {
     padding: 0 1.5rem;
     font:caption;
     font-size: 20px;
+    margin-top: 15px;
+}
+
+#pelicula-ficha {
+    padding-right: 2rem;
+    margin-top: 15px;
+}
+
+#pelicula-ficha div{
+    background: navajowhite;
+    padding-top: 1rem;
+    border: 0.5px solid;
+    display: table-cell;
 }
 
 
@@ -102,8 +116,7 @@ body, html {
 
 
 
-
-.ventana{
+.video{
     align-content: center;
     background: black;
     border: solid;
@@ -144,3 +157,4 @@ body, html {
     top: 38%;
     right: 0;
 }
+
