--- a/mysite/myapp/templates/myapp/film.html
+++ b/mysite/myapp/templates/myapp/film.html
@@ -43,11 +43,12 @@
     <section id="pelicula" class ="container">
         <div class="card">
             <div class="card-body">
-                <div class="row">
-                    <div id ="pelicula-portada" class="container col-4">
-                        <img src="img/1917.jpg" alt="1917" width="260" height="350" class="mx-auto d-block"> 
+                <div class="row container">
+                    <div id ="pelicula-portada" class=" col-4">
+                        <img src="img/1917.jpg" > 
+                        <!--alt="1917" width="260" height="350"  class="mx-auto d-block"-->
                     </div>
-                    <div id="pelicula-titulo" class="container col-8">
+                    <div id="pelicula-titulo" class=" col-8">
                         <div id="pelicula-titulo-valoracion" class="container">
                             <a>1917</a>
                             </br>
@@ -56,12 +57,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div id="pelicula-play" class="container col-4">
+                    <div id="pelicula-play" class="container col-3">
                         <a href="javascript:abrir()">
                             <button id="boton-play" type="submit" class="btn btn-primary mx-auto d-block">Play</button>
                         </a>
                     </div>
-                    <div id="pelicula-ficha" class="col-8">
+                    <div id="pelicula-ficha" class="col-8 col-md-5">
                         <div class="container">
                             <p>Año lanzamiento: 2020</p>
                             <p>Director: Pete Docter</p>
