--- a/mysite/myapp/templates/myapp/login_user.html
+++ b/mysite/myapp/templates/myapp/login_user.html
@@ -47,16 +47,16 @@
             <div class="card">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-3">
-                            <img src="img/1917.jpg" alt="1917" width="160" height="200" class="mx-auto d-block"> 
+                        <div class="col-3 col-md-3 col-sm-3">
+                            <img class="imagen_pelicula" src="img/1917.jpg" alt="1917" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-8">
+                        <div class="col-8 col-md-4 row-sm-3">
                             <h3>Título: 1917</h3>
                             <p>Año lanzamiento: 2019</p>
                             <p>Director: Sam Mendes</p>
                             <p>La película sigue a dos jóvenes soldados británicos a lo largo de un único día en lo más crudo de la Primera Guerra Mundial.</p>
                         </div>
-                        <div class="boton-entrar col-1">
+                        <div class="boton-entrar col-1 col-md-2 col-sm-2">
                             <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
                         </div>
                     </div>
@@ -65,16 +65,16 @@
             <div class="card">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-3">
-                            <img src="img/soul.jpg" alt="Soul" width="160" height="200" class="mx-auto d-block"> 
+                        <div class="col-3 col-md-3 col-sm-3">
+                            <img class="imagen_pelicula" src="img/soul.jpg" alt="Soul" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-8">
+                        <div class="col-8 col-md-4 row-sm-3">
                             <h3>Título: Soul</h3>
                             <p>Año lanzamiento: 2020</p>
                             <p>Director: Pete Docter</p>
                             <p>Los ritmos pegadizos, acentuados por palmas y movimientos corporales espontáneos, son un importante elemento del soul. Otras características son la llamada y respuesta entre el solista y el coro, y un sonido vocal particularmente tenso.</p>
                         </div>
-                        <div class="boton-entrar col-1">
+                        <div class="boton-entrar col-1 col-md-2 col-sm-2">
                             <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
                         </div>
                     </div>
