--- a/mysite/myapp/templates/myapp/films.html
+++ b/mysite/myapp/templates/myapp/films.html
@@ -36,21 +36,21 @@
         <div class="container">
             <h2>Peliculas</h2>
         </div>
-        <div class="container">
+        <div class="container-sm">
             <div class="card">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-3">
-                            <img src="img/1917.jpg" alt="1917" width="160" height="200" class="mx-auto d-block"> 
+                        <div class="col-3 col-md-3 col-sm-3">
+                            <img class="imagen_pelicula" src="img/1917.jpg" alt="1917" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-8">
+                        <div class="col-8 col-md-4 row-sm-3">
                             <h3>Título: 1917</h3>
                             <p>Año lanzamiento: 2019</p>
                             <p>Director: Sam Mendes</p>
                             <p>La película sigue a dos jóvenes soldados británicos a lo largo de un único día en lo más crudo de la Primera Guerra Mundial.</p>
                         </div>
-                        <div class="boton-entrar col-1">
-                            <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
+                        <div class="boton-entrar col-1 col-md-2 col-sm-2">
+                            <a href="#"> <img src="img/right-arrow2.png"></a>
                         </div>
                     </div>
                 </div>
@@ -58,17 +58,17 @@
             <div class="card">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-3">
-                            <img src="img/soul.jpg" alt="Soul" width="160" height="200" class="mx-auto d-block"> 
+                        <div class="col-3 col-md-3 col-sm-3">
+                            <img class="imagen_pelicula" src="img/soul.jpg" alt="Soul" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-8">
+                        <div class="col-8 col-md-4 row-sm-3">
                             <h3>Título: Soul</h3>
                             <p>Año lanzamiento: 2020</p>
                             <p>Director: Pete Docter</p>
                             <p>Los ritmos pegadizos, acentuados por palmas y movimientos corporales espontáneos, son un importante elemento del soul. Otras características son la llamada y respuesta entre el solista y el coro, y un sonido vocal particularmente tenso.</p>
                         </div>
-                        <div class="boton-entrar col-1">
-                            <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
+                        <div class="boton-entrar col-1 col-md-2 col-sm-2">
+                            <a href="#"> <img src="img/right-arrow2.png"></a>
                         </div>
                     </div>
                 </div>
@@ -76,16 +76,16 @@
             <div class="card">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-3">
-                            <img src="img/mank.jpg" alt="Mank" width="160" height="200" class="mx-auto d-block"> 
+                        <div class="col-3 col-md-3 col-sm-3">
+                            <img class="imagen_pelicula" src="img/mank.jpg" alt="Mank" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-8">
+                        <div class="col-8 col-md-4 row-sm-3">
                             <h3>Título: Mank</h3>
                             <p>Año lanzamiento: 2020</p>
                             <p>Director: David Fincher</p>
                             <p>Se adentra en el Hollywood de 1930 a través de los ojos de Herman Mankiewicz, uno de los más grandes libretistas de la época, a quien el alcohol le hizo perder su reputación.</p>
                         </div>
-                        <div class="boton-entrar col-1">
+                        <div class="boton-entrar col-1 col-md-2 col-sm-2">
                             <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
                         </div>
                     </div>
