funcionando nuevas peliculas y nuevos usuarios

--- a/mysite/myapp/templates/myapp/modify_user.html
+++ b/mysite/myapp/templates/myapp/modify_user.html
@@ -30,7 +30,8 @@
                                 </a>
                                 
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <li><a class="dropdown-item" href={% url 'new_user' %}>Añadir</a></li>
+                                    <li><a class="dropdown-item" href={% url 'new_user' %}>Añadir usuario</a></li>
+                                    <li><a class="dropdown-item" href={% url 'new_admin' %}>Añadir admin</a></li>
                                     <li><a class="dropdown-item" href={% url 'modify_user' %}>Borrar/Modificar</a></li>
                                 </ul>
                             </li>
