--- a/mysite/myapp/templates/myapp/films.html
+++ b/mysite/myapp/templates/myapp/films.html
@@ -40,49 +40,43 @@
             <div class="cards">
                 <div id="caja" class="card">
                     <div class="caja-cuerpo">
-                        <img class="imagen_pelicula" src="{%static 'myapp/img/1917.jpg' %}" alt="1917" width="160" height="200" class="mx-auto d-block">
-                        <h3>1917</h3>
-                        <p>Valoración: 4/5</p>
+                        <img class="imagen_pelicula" src="{%static 'myapp/img/1917.jpg' %}" alt="1917" width="320" height="400" class="mx-auto d-block">
+                        <h3 id="titulo-film-lista"><strong>1917</strong> <small>(4/5 &#x2605;)</small></h3>
                         <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
                     </div>
                 </div>
                 <div id="caja" class="card">
                     <div class="caja-cuerpo">
-                        <img class="imagen_pelicula" src="{%static 'myapp/img/soul.jpg' %}" alt="Soul" width="160" height="200" class="mx-auto d-block">
-                        <h3>Soul</h3>
-                        <p>Valoración: 3.9/5</p>
+                        <img class="imagen_pelicula" src="{%static 'myapp/img/soul.jpg' %}" alt="Soul" width="320" height="400" class="mx-auto d-block">
+                        <h3 id="titulo-film-lista"><strong>Soul</strong> <small>(3.5/5 &#x2605;)</small></h3>
                         <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
                     </div>
                 </div>
                 <div id="caja" class="card">
                     <div class="caja-cuerpo">
-                        <img class="imagen_pelicula" src="{%static 'myapp/img/mank.jpg' %}" alt="Mank" width="160" height="200" class="mx-auto d-block">
-                        <h3>Mank</h3>
-                        <p>Valoración: 4.5/5</p>
+                        <img class="imagen_pelicula" src="{%static 'myapp/img/mank.jpg' %}" alt="Mank" width="320" height="400" class="mx-auto d-block">
+                        <h3 id="titulo-film-lista"><strong>Mank</strong> <small>(4.3/5 &#x2605;)</small></h3>
                         <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
                     </div>
                 </div>
                 <div id="caja" class="card">
                     <div class="caja-cuerpo">
-                        <img class="imagen_pelicula" src="{%static 'myapp/img/1917.jpg' %}" alt="1917" width="160" height="200" class="mx-auto d-block">
-                        <h3>1917</h3>
-                        <p>Valoración: 4/5</p>
+                        <img class="imagen_pelicula" src="{%static 'myapp/img/1917.jpg' %}" alt="1917" width="320" height="400" class="mx-auto d-block">
+                        <h3 id="titulo-film-lista"><strong>1917</strong> <small>(4/5 &#x2605;)</small></h3>
                         <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
                     </div>
                 </div>
                 <div id="caja" class="card">
                     <div class="caja-cuerpo">
-                        <img class="imagen_pelicula" src="{%static 'myapp/img/soul.jpg' %}" alt="Soul" width="160" height="200" class="mx-auto d-block">
-                        <h3>Soul</h3>
-                        <p>Valoración: 3.9/5</p>
+                        <img class="imagen_pelicula" src="{%static 'myapp/img/soul.jpg' %}" alt="Soul" width="320" height="400" class="mx-auto d-block">
+                        <h3 id="titulo-film-lista"><strong>Soul</strong> <small>(3.5/5 &#x2605;)</small></h3>
                         <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
                     </div>
                 </div>
                 <div id="caja" class="card">
                     <div class="caja-cuerpo">
-                        <img class="imagen_pelicula" src="{%static 'myapp/img/mank.jpg' %}" alt="Mank" width="160" height="200" class="mx-auto d-block">
-                        <h3>Mank</h3>
-                        <p>Valoración: 4.5/5</p>
+                        <img class="imagen_pelicula" src="{%static 'myapp/img/mank.jpg' %}" alt="Mank" width="320" height="400" class="mx-auto d-block">
+                        <h3 id="titulo-film-lista"><strong>Mank</strong> <small>(4.3/5 &#x2605;)</small></h3>
                         <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
                     </div>
                 </div>
