--- a/mysite/myapp/templates/myapp/film.html
+++ b/mysite/myapp/templates/myapp/film.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,34 +43,33 @@
     </header>
     <section id="pelicula" class ="container">
         <div class="card">
-            <div class="card-body">
-                <div class="row container">
-                    <div id ="pelicula-portada" class=" col-4">
-                        <img src="{%static 'myapp/img/1917.jpg' %}"> 
-                        <!--alt="1917" width="260" height="350"  class="mx-auto d-block"-->
+            <div id="pelicula-card" class="card-body container">
+                <!--div class="row container"-->
+                    <div id ="pelicula-portada">
+                        <img src="{%static 'myapp/img/1917.jpg' %}" alt="1917" width="340" height="425"  class="mx-auto d-block">
                     </div>
-                    <div id="pelicula-titulo" class=" col-8">
+                    <div id="pelicula-titulo">
                         <div id="pelicula-titulo-valoracion" class="container">
-                            <a>1917</a>
+                            <a>1917 y La Maldición de la Perla Negra</a>
                             </br>
-                            <a1>4,5/5 <img src="{%static 'myapp/img/estrella.png' %}" width="40" height="40" /></a1>
+                            <a1>4,5/5 &#x2605;</a1>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div id="pelicula-play" class="container col-3">
+                <!--/div>
+                <div class="row container"-->
+                    <div id="pelicula-play">
                         <a href="javascript:abrir()">
                             <button id="boton-play" type="submit" class="btn btn-primary mx-auto d-block">Play</button>
                         </a>
                     </div>
-                    <div id="pelicula-ficha" class="col-8 col-md-5">
+                    <div id="pelicula-ficha">
                         <div class="container">
-                            <p>Año lanzamiento: 2020</p>
-                            <p>Director: Pete Docter</p>
+                            <p><b>Año lanzamiento:</b> 2020</p>
+                            <p><b>Director:</b> Pete Docter</p>
                             <p>La película sigue a dos jóvenes soldados británicos a lo largo de un único día en lo más crudo de la Primera Guerra Mundial.</p>
                         </div>
                     </div>
-                </div>
+                <!--/div-->
             </div>
         </div>
     </section>
