--- a/mysite/myapp/templates/myapp/login_admin.html
+++ b/mysite/myapp/templates/myapp/login_admin.html
@@ -36,7 +36,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
-                            <li class="nav-item"><a class="nav-link" href={% url 'index' %}>Cerrar sesión</a></li>
+                            <li class="nav-item"><a class="nav-link" href={% url 'get_logout' %}>Cerrar sesión</a></li>
                         </ul>
                     </div>
                 </div>
