--- a/mysite/myapp/templates/myapp/films.html
+++ b/mysite/myapp/templates/myapp/films.html
@@ -25,7 +25,7 @@
                             <li class="nav-item"><a class="nav-link" href={% url 'login_user' %}>Inicio</a></li>
                             <li class="nav-item"><a class="nav-link" href={% url 'films' %}>Peliculas</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
-                            <li class="nav-item"><a class="nav-link" href={% url 'index' %}>Cerrar sesión</a></li>
+                            <li class="nav-item"><a class="nav-link" href={% url 'get_logout' %}>Cerrar sesión</a></li>
                         </ul>
                     </div>
                 </div>
